deploy/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: explabs/platform-ui
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      serviceAccountName: api-sa
      containers:
      - name: api
        image: explabs/platform-server
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: etc-ssl-certs
          mountPath: /etc/ssl/certs/
      volumes:
      - name: etc-ssl-certs
        configMap:
          name: example-bundle
