deploy/k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edu
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: "learnops.local"
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui
            port:
              number: 80
  tls:
    - hosts:
      - learnops.local
      secretName: ingress-demo-tls
